<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/load_order_id_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load_order_id_textview_text" />
    
    <EditText
        android:id="@+id/load_order_id_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/load_order_id_edittext_hint"
        android:inputType="number" />
    
    <Button
        android:id="@+id/load_order_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load_order_button_text" />
    
    <TextView
        android:id="@+id/modify_order_id_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modify_order_id_textview_text" />
    
	<EditText
	    android:id="@+id/modify_order_id_edittext"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/modify_order_id_edittext_hint"
	    android:inputType="text" />
	
    <TextView
        android:id="@+id/modify_order_description_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modify_order_description_textview_text" />
    
	<EditText
	    android:id="@+id/modify_order_description_edittext"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/modify_order_description_edittext_hint"
	    android:inputType="text" />

    <TextView
        android:id="@+id/modify_order_hu_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modify_order_hu_textview_text" />
    
    <EditText
        android:id="@+id/modify_order_hu_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/modify_order_hu_hint" />
			
	<Button
	    android:id="@+id/modify_order_button"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/modify_order_button_text" />
	
</LinearLayout>